syntax = "proto3";

option csharp_namespace = "GerpcServer.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";



service TrackingService {
	rpc SendMessage (TrackingMessage) returns (TrackingResponse);
	rpc KeepAlive (stream PulseMessage) returns (google.protobuf.Empty);
}



message TrackingMessage {
	int32 deviceId = 1;
	int32 speed = 2;
	Location location = 3;
	google.protobuf.Timestamp stamp = 4;
	repeated Sensor sensors = 5;
}

message Location {
	double lat = 1;
	double long = 2;
}

message TrackingResponse {
	bool success = 1;
}

message Sensor {
	string key = 1;
	double value = 2;
}

message PulseMessage {
	ClientStatus status = 1;
	string details = 2;
	google.protobuf.Timestamp stamp = 3;
}

enum ClientStatus {
	INVALID = 0;
	WORKING = 1;
	FAIL = 2;
}